[package]
name = "daily_hn"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
slack-flows = "0.2.5"
tokio_wasi = { version = "1.25.1", features = ["full"] }
schedule-flows = "0.1.9"
serde_json = "1.0.94"

[dependencies.firebase-rs]
git = "https://github.com/jetjinser/firebase-rs"
branch = "diff-client"
default-features = false
features = ["wasmedge"]
